--- a/vue-nReader/index.html
+++ b/vue-nReader/index.html
@@ -17,7 +17,7 @@
   <!-- QQ应用模式 -->
   <!--<meta name="x5-page-mode" content="app">-->
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>随便看</title>
+  <title>我的图书</title>
 </head>
 
 <body>
